# GamePlay-deps

./: .gitmodules  CMakeLists.txt  README.md
SDL2-2.0.7/: CMakeLists.txt
bgfx-1.0.0/: CMakeLists.txt
bgfxBuilder/: build-linux.sh
bgfxBuilder/scripts/: genie.lua  shaderclib.lua
cmake/: gnu-amalgamate.sh
stb_image-2.16/: CMakeLists.txt
